--- a/chat.css
+++ b/chat.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
-container-1 div{
+.container-1 div{
   padding : 10px;
   border : 1px solid silver;
   
