--- a/chat.css
+++ b/chat.css
@@ -12,6 +12,7 @@ html, body {
 body {
     line-height: 1;
     font-family: 'Lato', sans-serif;
+    color: #000000;
 }
 
 .line {
@@ -27,11 +28,7 @@ body {
 .box1 {
     display: flex;
     width: 72px;
-    position: absolute;
-   left: -0.04%;
-   right: 94.93%;
-   top: -0.06%;
-   bottom: -0.06%;
+    
    background: #000000;
    mix-blend-mode: normal;
    opacity: 0.9;
@@ -40,30 +37,22 @@ body {
 .menu {
    display: flex;
    flex-direction: column;
+   width: 100%;
    margin-top: 32px;
 }
 
 
 .ryg {
-   position: absolute;
-   width: 100px;
-   height: 100px;
-   left: -4px;
-   top: -0.5px;
-}
+    display: flex;
+    
 
 
-.add {
-   position: absolute;
-   left: -0.04%;
-   right: 94.93%;
-   top: 92.44%;
-   bottom: -0.06%;
 }
+
 
 .box2 {
     display: flex;
-    width: 260px;
+    width: 100%;
 }
 
 .box3 {
